--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.7'
 services: 
     app:
         container_name: app
@@ -7,7 +6,7 @@ services:
             dockerfile: Dockerfile
         restart: always
         ports: 
-            - "8000:8000"
+            - "8080:8080"
     api:
         container_name: api
         build: 
@@ -15,7 +14,23 @@ services:
             dockerfile: Dockerfile.api
         restart: always
         ports: 
-            - "8081:8081"            
+            - "8081:8081"
+        depends_on:
+            - postgres
+    postgres:
+        container_name: postgres
+        image: postgres:14
+        restart: always
+        environment:
+            POSTGRES_USER: bed_user
+            POSTGRES_PASSWORD: bed_password
+            POSTGRES_DB: bed_db
+        ports:
+            - "5432:5432"
+        volumes:
+            - postgres-db-volume:/var/lib/postgresql/data        
+        # volumes:
+        #     - ./postgres_data:/var/lib/postgresql/data
     # nginx:
     #     depends_on: 
     #         - docker-fastapi
@@ -26,4 +41,11 @@ services:
     #     ports: 
     #         - "80:80"
     #     restart: always
-        
+
+volumes:
+    postgres-db-volume:
+        driver: local
+        driver_opts:
+            type: none
+            o: bind
+            device: ./data
